--- a/views/post.ejs
+++ b/views/post.ejs
@@ -22,13 +22,15 @@
                 <h2 class="text-sm title-font text-gray-500 tracking-widest"><%= post._id%></h2>
                 <br>
               <p class="leading-relaxed"><%= post.desc %> </p>
+              <%   if(user.username == post.userName) { %>
               <div class="flex items-center py-2">
                 <a href="/post/<%= post._id%>/edit" class="mr-4">
                     <button class="flex ml-auto text-white bg-[#333] border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded"> Edit</button></a>
                 <form action="/post/<%= post._id%>?_method=DELETE" method="POST" class="delete">
-                    <button class="flex ml-auto text-white bg-[#333] border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">🗑️ Delete</button>
+                    <button class="bg-[#333] text-white p-2 rounded-xl">🗑️ Delete </button>
                 </form>
             </div>
+            <% } %> 
             </div>
           </div>
         </div>
@@ -36,6 +38,6 @@
 
       <footer class="text-center p-8 bg-white text-lg">
         <p>Designed & Created By <span>ASHISH JHA</span> ( @ashjha03 )</p>
-    </footer>
+      </footer>
 </body>
 </html>
