--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,19 +13,20 @@
         <h2 class="text-2xl">Want to share your thoughts, here is Postify for you ...</h2>
     </div>
 
-    <form action="/login" class="container p-5 rounded-xl bg-[#999] h-[65vh] text-lg mx-auto mt-4" method="post">
-        <div class="form-input">
+    <form action="/login" class="container p-8 rounded-xl bg-[#fff] shadow h-[65vh] text-lg mx-auto mt-4" method="post">
+        <p class="text-center bg-[#f4f4f4] py-2 rounded-lg font-bold">To post your thoughts, and view others <br> Please LOGIN first ...</p>
+        <div class="form-input py-4">
             <label for="title">Username: </label>
             <br>
             <input class="p-3 w-full border border-[#666] rounded-lg" name="username" type="text">
         </div>
-        <div class="form-input">
+        <div class="form-input py-4">
             <label for="title">Password: </label>
             <br>
             <input class="p-3 w-full border border-[#666] rounded-lg" name="password" type="password">
         </div>
-        <button class="my-2 bg-[#333] text-white p-2 rounded-xl">Login</button>
-        <a href="/register" class="my-2 bg-[#333] text-white p-[.7rem] ml-2 rounded-xl">Register</a>
+        <button class="my-4 bg-blue-600 w-[50%] ml-[21vw] text-white p-2 rounded-xl hover:underline">Login</button> <br>
+        <p class=""><span class="underline"> Not Registered yet?</span><a href="/register" class="my-2 bg-[#333] text-white p-[.7rem] ml-2 rounded-xl">Register</a></p>
     </form>
 
     <footer class="text-center p-8 mt-12 bg-white text-lg">
