--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,24 +13,26 @@
         <h2 class="text-2xl">Want to share your thoughts, here is Postify for you ...</h2>
     </div>
 
-    <form action="/register" class="container p-5 rounded-xl bg-[#999] h-[65vh] text-lg mx-auto mt-4" method="post">
-        <div class="form-input">
+    <form action="/register" class="container p-8 rounded-xl bg-[#fff] shadow h-full text-lg mx-auto mt-4" method="post">
+        <p class="text-center bg-[#f4f4f4] py-2 rounded-lg font-bold">Welcome, Postify - Share Your Thoughts <br>  Register here ...</p>
+        <div class="form-input py-4">
             <label for="title">Username: </label>
             <br>
             <input class="p-3 w-full border border-[#666] rounded-lg" name="username" type="text">
         </div>
-        <div class="form-input">
+        <div class="form-input py-4">
             <label for="title">Email: </label>
             <br>
             <input class="p-3 w-full border border-[#666] rounded-lg" name="email" type="email">
         </div>
-        <div class="form-input">
+        <div class="form-input py-4">
             <label for="title">Password: </label>
             <br>
             <input class="p-3 w-full border border-[#666] rounded-lg" name="password" type="password">
         </div>
-        <button class="my-2 bg-[#333] text-white p-2 rounded-xl">Register</button>
-        <a href="/login" class="my-2 bg-[#333] text-white p-[.7rem] ml-2 rounded-xl">Login</a>
+        <button class="my-6 bg-blue-600 w-[50%] ml-[21vw] text-white p-2 rounded-xl hover:underline">Register</button> 
+        <br>
+        <p class=""><span class="underline"> Already Registered</span><a href="/login" class="my-2 bg-[#333] text-white p-[.7rem] px-[1rem] ml-2 rounded-xl">Login</a></p>
     </form>
 
     <footer class="text-center p-8 mt-12 bg-white text-lg">
