Post form updated

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,26 +36,26 @@
             </div>
             <% } %> 
         </div>
-        <form class="bg-[#999] rounded-xl fixed top-[9rem] p-7 py-2  right-0" action="/newPost" method="post">
+        <form class="bg-[#fff] shadow-lg rounded-xl fixed top-[9rem] p-7 py-2  right-0" action="/newPost" method="post">
             <div class="heading text-center font-bold text-xl underline my-4">
                 <h1>Post &nbsp;Something &nbsp;New</h1>
             </div>
             <div class="form-input mb-3">
                 <label for="title" class="font-bold">Title: </label>
                 <br>
-                <input class="w-full p-2 border border-[#666] rounded-lg" name="title" type="text">
+                <input class="w-full p-2 border border-[#666] rounded-lg bg-[#f4f4f4]" name="title" type="text">
             </div>
             <div class="form-input mb-3">
                 <label for="desc" class="font-bold">Description: </label>
                 <br>
-                <textarea class="w-full p-2 border border-[#666] rounded-lg" name="desc" cols="30" rows="10"></textarea>
+                <textarea class="w-full p-2 border border-[#666] rounded-lg bg-[#f4f4f4]" name="desc" cols="30" rows="10"></textarea>
             </div>
             <div class="form-input mb-3">
                 <label for="imgUrl" class="font-bold">Image URL: </label>
                 <br>
-                <input class="w-full p-2 border border-[#666] rounded-lg" name="imgUrl" type="text">
+                <input class="w-full p-2 border border-[#666] rounded-lg bg-[#f4f4f4]" name="imgUrl" type="text">
             </div>
-            <button class="my-2 bg-[#333] text-white p-2 rounded-xl">Post</button>
+            <button class="my-2 w-full bg-[#333] text-white p-2 rounded-xl">Post</button>
         </form>
     </div>
 
