--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,9 +8,19 @@
     <title>Login - Postify</title>
 </head>
 <body class="bg-[#f4f4f4]">
-    <div class="head text-center my-2 py-2 bg-white w-[70vw] mx-auto border rounded-lg">
+    <div class="relative head text-center my-2 py-2 bg-white w-[70vw] mx-auto border rounded-lg">
         <a href="/"><h1 class="text-5xl my-2">Postify 📱</h1></a>
         <h2 class="text-2xl">Want to share your thoughts, here is Postify for you ...</h2>
+        <%  if(user) { %>
+            <form class="absolute top-2 right-2 px-4" action="/logout" method="post">
+                <button class="bg-red-800 font-bold text-white p-2 px-4 rounded-xl hover:underline">Logout</button>
+            </form>
+            <a class="absolute top-12 right-4 hover:underline bg-[#333] text-white font-bold p-2 rounded-xl mt-2" href="/myPosts">Your Posts</a>
+            <% } else { %> 
+                <form class="absolute top-2 right-2 p-4" action="/login" method="post">
+                    <button class="bg-blue-600 font-bold text-white p-2 px-4 rounded-xl hover:underline">Login</button>
+                </form>
+            <% } %> 
     </div>
 
     <form action="/login" class="container p-8 rounded-xl bg-[#fff] shadow h-[65vh] text-lg mx-auto mt-4" method="post">
