--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Postify - Share your thoughts</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="./css/main.css" rel="stylesheet">
 </head>
 <body class="bg-[#f4f4f4] font-sans">
     <div class="head relative text-center my-2 py-2 bg-white w-[70vw] mx-auto border rounded-lg">
