--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="T0LwumkLKao4QwnL_qAcKB4HvD9aByQyesCGjP79yns" />
     <title>Postify - Share your thoughts</title>
     <link href="./css/main.css" rel="stylesheet">
 </head>
